Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -111,9 +111,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample 1 Summary\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DescribeResult(nobs=100, minmax=(50.82919253646425, 146.99298510189024), mean=96.5717320485065, variance=352.94866123284805, skewness=-0.16766850820277945, kurtosis=0.1161858751985334)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "k = 100\n",
     "sample1 = np.random.choice(pop,100,replace=True)\n",
