Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -142,9 +142,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample 2 Summary\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DescribeResult(nobs=100, minmax=(38.67673042938479, 147.6329687822037), mean=95.89422634824197, variance=429.90055484304014, skewness=-0.2423331614905983, kurtosis=-0.00015163693563469138)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sample2 = np.random.choice(pop,100,replace=True)\n",
     "print (\"Sample 2 Summary\")\n",
