--- a/index.ipynb
+++ b/index.ipynb
@@ -182,9 +182,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=0.24214410077611478, pvalue=0.8089191264672106)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# test the sample means\n",
     "stats.ttest_ind(sample1, sample2)"
