Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,11 @@
     "    sig_tests : DataFrame\n",
     "        A dataframe containing the columns 'type_2_error', 'p_value', and 'alpha'\n",
     "    \"\"\"\n",
-    "    pass"
+    "    k = 100\n",
+    "sample1 = np.random.choice(pop,100,replace=True)\n",
+    "\n",
+    "print (\"Sample 1 Summary\")\n",
+    "stats.describe(sample1)"
    ]
   },
   {
