Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -301,7 +301,10 @@
     "sample1 = np.random.choice(pop,100,replace=True)\n",
     "\n",
     "print (\"Sample 1 Summary\")\n",
-    "stats.describe(sample1)"
+    "stats.describe(sample1)\n",
+    "sample2 = np.random.choice(pop,100,replace=True)\n",
+    "print (\"Sample 2 Summary\")\n",
+    "stats.describe(sample2)"
    ]
   },
   {
