Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -298,13 +298,15 @@
     "        A dataframe containing the columns 'type_2_error', 'p_value', and 'alpha'\n",
     "    \"\"\"\n",
     "    k = 100\n",
-    "sample1 = np.random.choice(pop,100,replace=True)\n",
+    "    sample1 = np.random.choice(pop,100,replace=True)\n",
     "\n",
-    "print (\"Sample 1 Summary\")\n",
-    "stats.describe(sample1)\n",
-    "sample2 = np.random.choice(pop,100,replace=True)\n",
-    "print (\"Sample 2 Summary\")\n",
-    "stats.describe(sample2)"
+    "    print (\"Sample 1 Summary\")\n",
+    "    stats.describe(sample1)\n",
+    "    sample2 = np.random.choice(pop,100,replace=True)\n",
+    "    print (\"Sample 2 Summary\")\n",
+    "    stats.describe(sample2)\n",
+    "    # test the sample means\n",
+    "    stats.ttest_ind(sample1, sample2)"
    ]
   },
   {
