--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,7 @@
     "    sig_tests : DataFrame\n",
     "        A dataframe containing the columns 'type_2_error', 'p_value', and 'alpha'\n",
     "    \"\"\"\n",
-    "    k = 100\n",
+    "    for _ in range(num_tests):\n",
     "    sample1 = np.random.choice(pop,100,replace=True)\n",
     "\n",
     "    print (\"Sample 1 Summary\")\n",
