Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -305,7 +305,7 @@
     "        print (\"Sample 2 Summary\")\n",
     "        stats.describe(sample2)\n",
     "        # test the sample means\n",
-    "        stats.ttest_ind(sample1, sample2)"
+    "        statistic, pvalue = stats.ttest_ind(sample1, sample2)"
    ]
   },
   {
