--- a/index.ipynb
+++ b/index.ipynb
@@ -299,11 +299,9 @@
     "    \"\"\"\n",
     "    for _ in range(num_tests):\n",
     "        sample1 = np.random.choice(pop,100,replace=True)\n",
-    "        print (\"Sample 1 Summary\")\n",
-    "        stats.describe(sample1)\n",
     "        sample2 = np.random.choice(pop,100,replace=True)\n",
-    "        # test the sample means\n",
-    "        statistic, pvalue = stats.ttest_ind(sample1, sample2)"
+    "        statistic, pvalue = stats.ttest_ind(sample1, sample2)\n",
+    "        "
    ]
   },
   {
