Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -301,7 +301,8 @@
     "        sample1 = np.random.choice(pop,100,replace=True)\n",
     "        sample2 = np.random.choice(pop,100,replace=True)\n",
     "        statistic, pvalue = stats.ttest_ind(sample1, sample2)\n",
-    "        "
+    "        if p_value < alpha_set:\n",
+    "            reject"
    ]
   },
   {
