Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -302,7 +302,9 @@
     "        sample2 = np.random.choice(pop,100,replace=True)\n",
     "        statistic, pvalue = stats.ttest_ind(sample1, sample2)\n",
     "        if p_value < alpha_set:\n",
-    "            reject"
+    "            reject = True\n",
+    "        else:\n",
+    "            reject = False"
    ]
   },
   {
