--- a/index.ipynb
+++ b/index.ipynb
@@ -304,7 +304,8 @@
     "        if p_value < alpha_set:\n",
     "            reject = True\n",
     "        else:\n",
-    "            reject = False"
+    "            reject = False\n",
+    "            "
    ]
   },
   {
