--- a/index.ipynb
+++ b/index.ipynb
@@ -295,8 +295,9 @@
     "    Returns\n",
     "    ----------\n",
     "    sig_tests : DataFrame\n",
-    "        A dataframe containing the columns 'type_2_error', 'p_value', and 'alpha'\n",
+    "        A dataframe containing the columns 'type_1_error', 'p_value', and 'alpha'\n",
     "    \"\"\"\n",
+    "    type_1_error =\n",
     "    for _ in range(num_tests):\n",
     "        sample1 = np.random.choice(pop,100,replace=True)\n",
     "        sample2 = np.random.choice(pop,100,replace=True)\n",
