--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,9 @@
     "    sig_tests : DataFrame\n",
     "        A dataframe containing the columns 'type_1_error', 'p_value', and 'alpha'\n",
     "    \"\"\"\n",
-    "    type_1_error =\n",
+    "    type_1_error = []\n",
+    "    p_value = []\n",
+    "    alpha = []\n",
     "    for _ in range(num_tests):\n",
     "        sample1 = np.random.choice(pop,100,replace=True)\n",
     "        sample2 = np.random.choice(pop,100,replace=True)\n",
