Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -304,7 +304,7 @@
     "        sample1 = np.random.choice(pop,100,replace=True)\n",
     "        sample2 = np.random.choice(pop,100,replace=True)\n",
     "        statistic, pvalue = stats.ttest_ind(sample1, sample2)\n",
-    "        if p_value < alpha_set:\n",
+    "        if p_value < alpha_set[i]:\n",
     "            reject = True\n",
     "        else:\n",
     "            reject = False\n",
