Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -306,9 +306,9 @@
     "        statistic, pvalue = stats.ttest_ind(sample1, sample2)\n",
     "        for i in range(len(alpha_set)):\n",
     "            if p_value < alpha_set[i]:\n",
-    "                reject = True\n",
+    "                type_1_error = True\n",
     "            else:\n",
-    "                reject = False\n",
+    "                type_ = False\n",
     "            "
    ]
   },
