Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -297,9 +297,9 @@
     "    sig_tests : DataFrame\n",
     "        A dataframe containing the columns 'type_1_error', 'p_value', and 'alpha'\n",
     "    \"\"\"\n",
-    "    type_1_error = []\n",
-    "    p_value = []\n",
-    "    alpha = []\n",
+    "    type_1_errors = []\n",
+    "    p_values = []\n",
+    "    alphas = []\n",
     "    for _ in range(num_tests):\n",
     "        sample1 = np.random.choice(pop,100,replace=True)\n",
     "        sample2 = np.random.choice(pop,100,replace=True)\n",
@@ -308,7 +308,8 @@
     "            if p_value < alpha_set[i]:\n",
     "                type_1_error = True\n",
     "            else:\n",
-    "                type_ = False\n",
+    "                type_1_error = False\n",
+    "            type_1_er\n",
     "            "
    ]
   },
