--- a/index.ipynb
+++ b/index.ipynb
@@ -309,7 +309,8 @@
     "                type_1_error = True\n",
     "            else:\n",
     "                type_1_error = False\n",
-    "            type_1_er\n",
+    "            type_1_errors.append(type_1_error)\n",
+    "            p_values.append(p)\n",
     "            "
    ]
   },
