Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -310,7 +310,8 @@
     "            else:\n",
     "                type_1_error = False\n",
     "            type_1_errors.append(type_1_error)\n",
-    "            p_values.append(p)\n",
+    "            p_values.append(pvalue)\n",
+    "            alphas.append(alpha_set[i])\n",
     "            "
    ]
   },
