Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -312,6 +312,7 @@
     "            type_1_errors.append(type_1_error)\n",
     "            p_values.append(pvalue)\n",
     "            alphas.append(alpha_set[i])\n",
+    "    return pd.DataFrame([])\n",
     "            "
    ]
   },
