--- a/index.ipynb
+++ b/index.ipynb
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
     "            type_1_errors.append(type_1_error)\n",
     "            p_values.append(pvalue)\n",
     "            alphas.append(alpha_set[i])\n",
-    "    return pd.DataFrame([])\n",
+    "    return pd.DataFrame([type_1_errors, p_values, alphas])\n",
     "            "
    ]
   },
