--- a/index.ipynb
+++ b/index.ipynb
@@ -334,7 +334,7 @@
    "outputs": [],
    "source": [
     "# group type 1 error by values of alpha\n",
-    "pop = None\n",
+    "pop = np.random.normal(100, 20, 1000)\n",
     "num_tests = None\n",
     "alpha_set = None\n",
     "sig_tests_1 = type_1_error(pop, num_tests, alpha_set)\n",
