--- a/index.ipynb
+++ b/index.ipynb
@@ -335,7 +335,7 @@
    "source": [
     "# group type 1 error by values of alpha\n",
     "pop = np.random.normal(100, 20, 1000)\n",
-    "num_tests = None\n",
+    "num_tests = 1000\n",
     "alpha_set = None\n",
     "sig_tests_1 = type_1_error(pop, num_tests, alpha_set)\n",
     "group_error = sig_tests.groupby('alpha')['type_1_error'].sum()\n",
