--- a/index.ipynb
+++ b/index.ipynb
@@ -303,7 +303,7 @@
     "    for _ in range(num_tests):\n",
     "        sample1 = np.random.choice(pop,100,replace=True)\n",
     "        sample2 = np.random.choice(pop,100,replace=True)\n",
-    "        statistic, pvalue = stats.ttest_ind(sample1, sample2)\n",
+    "        statistic, p_value = stats.ttest_ind(sample1, sample2)\n",
     "        for i in range(len(alpha_set)):\n",
     "            if p_value < alpha_set[i]:\n",
     "                type_1_error = True\n",
