--- a/index.ipynb
+++ b/index.ipynb
@@ -312,7 +312,7 @@
     "            type_1_errors.append(type_1_error)\n",
     "            p_values.append(p_value)\n",
     "            alphas.append(alpha_set[i])\n",
-    "    return pd.DataFrame([type_1_errors, p_values, alphas])\n",
+    "    return \n",
     "            "
    ]
   },
