Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -312,6 +312,8 @@
     "            type_1_errors.append(type_1_error)\n",
     "            p_values.append(p_value)\n",
     "            alphas.append(alpha_set[i])\n",
+    "    df = pd.DataFrame([type_1_errors, p_values, alphas])\n",
+    "    df.columns \n",
     "    return \n",
     "            "
    ]
