Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -277,9 +277,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-12-26263a473040>, line 33)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-26263a473040>\"\u001b[0;36m, line \u001b[0;32m33\u001b[0m\n\u001b[0;31m    df.columns = ['type_1_error', 'p_value', and 'alpha']\u001b[0m\n\u001b[0m                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def type_1_error(population, num_tests, alpha_set):\n",
     "    \"\"\"\n",
@@ -313,8 +322,8 @@
     "            p_values.append(p_value)\n",
     "            alphas.append(alpha_set[i])\n",
     "    df = pd.DataFrame([type_1_errors, p_values, alphas])\n",
-    "    df.columns \n",
-    "    return \n",
+    "    df.columns = ['type_1_error', 'p_value', and 'alpha']\n",
+    "    return df\n",
     "            "
    ]
   },
