Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -430,7 +430,24 @@
     "    sig_tests : DataFrame\n",
     "        A dataframe containing the columns 'type_2_error', 'p_value', and 'alpha'\n",
     "    \"\"\"\n",
-    "    pass"
+    "    type_2_errors = []\n",
+    "    p_values = []\n",
+    "    alphas = []\n",
+    "    for _ in range(num_tests):\n",
+    "        sample1 = np.random.choice(pop,100,replace=True)\n",
+    "        sample2 = np.random.choice(pop,100,replace=True)\n",
+    "        statistic, p_value = stats.ttest_ind(sample1, sample2)\n",
+    "        for i in range(len(alpha_set)):\n",
+    "            if p_value < alpha_set[i]:\n",
+    "                type_1_error = True\n",
+    "            else:\n",
+    "                type_1_error = False\n",
+    "            type_1_errors.append(type_1_error)\n",
+    "            p_values.append(p_value)\n",
+    "            alphas.append(alpha_set[i])\n",
+    "    df = pd.DataFrame([type_1_errors, p_values, alphas]).T\n",
+    "    df.columns = ['type_1_error', 'p_value', 'alpha']\n",
+    "    return df"
    ]
   },
   {
