Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -411,6 +411,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "np.random.rando"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def type_2_error(population, population_2, num_tests, alpha_set):\n",
     "    \n",
     "    \"\"\"\n",
