Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -477,6 +477,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a population distribution with a mean of 100, a standard deviation of 20, and a size of 1000\n",
+    "Create a second population distribution with a mean of 110, a standard deviation of 20 and a size of 1000\n",
+    "Specify the number of hypothesis tests to be 1000\n",
+    "Create a list of alphas = [0.001, 0.01, 0.05, 0.1, 0.2, 0.5]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
