--- a/index.ipynb
+++ b/index.ipynb
@@ -492,7 +492,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pop = None\n",
+    "pop = scipy.stats.norm\n",
     "pop2 = None\n",
     "num_tests = None\n",
     "alpha_set = None\n",
