Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -488,11 +488,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.6531586392643236"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pop = \n",
+    "pop = stats.norm.rvs()\n",
     "pop2 = None\n",
     "num_tests = None\n",
     "alpha_set = None\n",
