--- a/index.ipynb
+++ b/index.ipynb
@@ -510,7 +510,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pop = stats.norm.rvs()\n",
+    "pop = stats.norm.rvs(size=)\n",
     "pop2 = None\n",
     "num_tests = None\n",
     "alpha_set = None\n",
