--- a/index.ipynb
+++ b/index.ipynb
@@ -510,7 +510,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pop = stats.norm(loc=100, scale=20)\n",
+    "pop = stats.norm.rvs(loc=100, scale=20, size=1000)\n",
     "pop2 = None\n",
     "num_tests = None\n",
     "alpha_set = None\n",
