--- a/index.ipynb
+++ b/index.ipynb
@@ -511,7 +511,7 @@
    "outputs": [],
    "source": [
     "pop = stats.norm.rvs(loc=100, scale=20, size=1000)\n",
-    "pop2 = None\n",
+    "pop2 = stats.norm.rvs(loc=110, )\n",
     "num_tests = None\n",
     "alpha_set = None\n",
     "sig_tests_2 = type_2_error(pop,pop2,num_tests,alpha_set)\n",
