--- a/index.ipynb
+++ b/index.ipynb
@@ -512,8 +512,8 @@
    "source": [
     "pop = stats.norm.rvs(loc=100, scale=20, size=1000)\n",
     "pop2 = stats.norm.rvs(loc=110, scale=20, size=1000)\n",
-    "num_tests = 1---\n",
-    "alpha_set = None\n",
+    "num_tests = 1000\n",
+    "alpha_set = \n",
     "sig_tests_2 = type_2_error(pop,pop2,num_tests,alpha_set)\n",
     "\n",
     "group_error2 = sig_tests_2.groupby('alpha')['type_2_error'].sum()\n",
