--- a/index.ipynb
+++ b/index.ipynb
@@ -477,34 +477,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create a population distribution with a mean of 100, a standard deviation of 20, and a size of 1000\n",
-    "Create a second population distribution with a mean of 110, a standard deviation of 20 and a size of 1000\n",
-    "Specify the number of hypothesis tests to be 1000\n",
-    "Create a list of alphas = [0.001, 0.01, 0.05, 0.1, 0.2, 0.5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-0.6531586392643236"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -513,7 +485,7 @@
     "pop = stats.norm.rvs(loc=100, scale=20, size=1000)\n",
     "pop2 = stats.norm.rvs(loc=110, scale=20, size=1000)\n",
     "num_tests = 1000\n",
-    "alpha_set = \n",
+    "alpha_set = [0.001, 0.01, 0.05, 0.1, 0.2, 0.5]\n",
     "sig_tests_2 = type_2_error(pop,pop2,num_tests,alpha_set)\n",
     "\n",
     "group_error2 = sig_tests_2.groupby('alpha')['type_2_error'].sum()\n",
