Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -453,8 +453,8 @@
     "    p_values = []\n",
     "    alphas = []\n",
     "    for _ in range(num_tests):\n",
-    "        sample1 = np.random.choice(pop,100,replace=True)\n",
-    "        sample2 = np.random.choice(pop,100,replace=True)\n",
+    "        sample1 = np.random.choice(population,100,replace=True)\n",
+    "        sample2 = np.random.choice(populat,100,replace=True)\n",
     "        statistic, p_value = stats.ttest_ind(sample1, sample2)\n",
     "        for i in range(len(alpha_set)):\n",
     "            if p_value < alpha_set[i]:\n",
