--- a/index.ipynb
+++ b/index.ipynb
@@ -454,7 +454,7 @@
     "    alphas = []\n",
     "    for _ in range(num_tests):\n",
     "        sample1 = np.random.choice(population,100,replace=True)\n",
-    "        sample2 = np.random.choice(populat,100,replace=True)\n",
+    "        sample2 = np.random.choice(population_2,100,replace=True)\n",
     "        statistic, p_value = stats.ttest_ind(sample1, sample2)\n",
     "        for i in range(len(alpha_set)):\n",
     "            if p_value < alpha_set[i]:\n",
