Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -457,7 +457,7 @@
     "        sample2 = np.random.choice(population_2,100,replace=True)\n",
     "        statistic, p_value = stats.ttest_ind(sample1, sample2)\n",
     "        for i in range(len(alpha_set)):\n",
-    "            if p_value < alpha_set[i]:\n",
+    "            if p_value > alpha_set[i]:\n",
     "                type_1_error = True\n",
     "            else:\n",
     "                type_1_error = False\n",
